--- a/src/main/resources/patagonia/Historial_Cliente.fxml
+++ b/src/main/resources/patagonia/Historial_Cliente.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: radial-gradient(center 50% 50%, radius 100%, #2ecc71, #004d40);" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Button layoutX="436.0" layoutY="336.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="106.0" text="Salir" />
       <TextField alignment="TOP_CENTER" editable="false" layoutX="191.0" layoutY="112.0" prefHeight="26.0" prefWidth="218.0" text=" En proceso ">
