--- a/src/main/resources/patagonia/view/MenuPrincipal.fxml
+++ b/src/main/resources/patagonia/view/MenuPrincipal.fxml
@@ -1,44 +1,46 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" 
-      style="-fx-background-color: radial-gradient(focus-angle 0.0deg, focus-distance 0.0% , center 50.0% 50.0%, radius 100.0%, #00d2a0 0.0%, #003300 100.0%);" 
-      xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="patagonia.controller.MenuController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: linear-gradient(to bottom, #009688, #004d40, #00251a);" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="patagonia.controller.MenuController">
 
    <children>
-      <Label alignment="CENTER" layoutX="30.0" layoutY="30.0" prefHeight="40.0" prefWidth="90.0" 
-             style="-fx-background-color: #00d2a0; -fx-border-color: black; -fx-border-width: 2px; -fx-background-radius: 0; -fx-font-weight: bold;" 
-             text="PW">
+      <Label alignment="CENTER" layoutX="30.0" layoutY="30.0" prefHeight="40.0" prefWidth="90.0" style="-fx-background-color: #00d2a0; -fx-border-color: black; -fx-border-width: 2px; -fx-background-radius: 0; -fx-font-weight: bold;" text="PW">
          <font>
             <Font name="System Bold" size="20.0" />
          </font>
       </Label>
-
-      <Button fx:id="btnCliente" layoutX="195.0" layoutY="130.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="210.0" 
-              style="-fx-background-color: #00d2a0; -fx-background-radius: 30; -fx-border-color: black; -fx-border-radius: 30; -fx-border-width: 2px; -fx-cursor: hand;" 
-              text="Cliente">
+      <Button fx:id="btnVender" defaultButton="true" layoutX="390.0" layoutY="421.0" mnemonicParsing="false" onAction="#realizarVenta" prefHeight="54.0" prefWidth="143.0" style="-fx-background-color: black; -fx-text-fill: white; -fx-background-radius: 15; -fx-border-color: #66bb6a; -fx-border-radius: 15; -fx-border-width: 2;" text="Salir">
          <font>
             <Font name="System Bold" size="16.0" />
          </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+         <effect>
+            <DropShadow color="#000000" height="10.0" radius="4.5" width="10.0" />
+         </effect>
       </Button>
-
-      <Button fx:id="btnColaboradores" layoutX="195.0" layoutY="200.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="210.0" 
-              style="-fx-background-color: #00d2a0; -fx-background-radius: 30; -fx-border-color: black; -fx-border-radius: 30; -fx-border-width: 2px; -fx-cursor: hand;" 
-              text="Colaboradores">
+      <Button fx:id="btnViajePersonal" layoutX="334.0" layoutY="201.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="255.0" style="-fx-background-color: #00d2a0; -fx-background-radius: 10; -fx-border-color: black; -fx-border-radius: 10; -fx-border-width: 2px; -fx-cursor: hand;" text="Cliente">
          <font>
-            <Font name="System Bold" size="16.0" />
+            <Font name="Tahoma Bold" size="18.0" />
          </font>
+         <effect>
+            <DropShadow color="#00000066" offsetY="3.0" />
+         </effect>
       </Button>
-
-      <Button fx:id="btnSalir" layoutX="250.0" layoutY="300.0" mnemonicParsing="false" onAction="#salirDelPrograma" style="-fx-background-color: transparent; -fx-text-fill: white; -fx-underline: true;" text="Salir">
+      <Button fx:id="btnViajePersonal1" layoutX="334.0" layoutY="294.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="255.0" style="-fx-background-color: #00d2a0; -fx-background-radius: 10; -fx-border-color: black; -fx-border-radius: 10; -fx-border-width: 2px; -fx-cursor: hand;" text="Colaboradores">
          <font>
-            <Font size="14.0" />
+            <Font name="Tahoma Bold" size="18.0" />
          </font>
+         <effect>
+            <DropShadow color="#00000066" offsetY="3.0" />
+         </effect>
       </Button>
       
    </children>
